--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       transition: all 0.3s ease;
       top:100px;
       right:10px;
-      width:min(240px,35vw);
+      width:min(260px,42vw);
       max-height:50%;
       opacity:0.9;
     }
@@ -233,42 +233,6 @@
       color:#000;
       border:1px solid #ccc;
     }
-
-    /* Lista risultati "campi più vicini" cliccabile */
-    .nearest-list {
-      margin:0;
-      padding:0;
-    }
-    .nearest-item {
-      display:flex;
-      align-items:flex-start;
-      gap:6px;
-      padding:3px 4px;
-      border-radius:4px;
-      cursor:pointer;
-      transition:background-color 0.15s ease;
-    }
-    .nearest-item:hover {
-      background:#f0f7ff; /* effetto mouseover */
-    }
-    .nearest-dot {
-      flex:0 0 8px;
-      width:8px;
-      height:8px;
-      border-radius:50%;
-      margin-top:5px;
-    }
-    .nearest-text {
-      flex:1;
-      font-size:12px;
-    }
-    .nearest-name {
-      margin:0;
-    }
-    .nearest-distance {
-      font-size:11px;
-      color:#555;
-    }
   </style>
 </head>
 <body>
@@ -429,7 +393,7 @@
       width:3
     });
 
-    /* ====== SIMBOLO CAMPI (tennis blu / padel rosso, 4px) ====== */
+    /* ====== SIMBOLO CAMPI (statico, tennis vs padel, 4px) ====== */
     function createCourtSymbol(attrs) {
       const sportValue = (attrs && attrs.sport ? String(attrs.sport) : "").toLowerCase();
       const isPadel = sportValue === "padel";
@@ -438,11 +402,11 @@
         color: isPadel ? [255, 0, 0, 0.9]        // padel = rosso
                        : [0, 112, 255, 0.9],     // tennis = blu
         outline: {
-          color: isPadel ? [255, 200, 200, 1]
+          color: isPadel ? [255, 200, 200, 1]   // contorno chiaro padel
                          : [80, 220, 255, 1],
           width: 1
         },
-        size: 4
+        size: 4                                  // dimensione fissa ridotta
       });
     }
 
@@ -452,14 +416,14 @@
       const sportValue = (attrs.sport ? String(attrs.sport) : "").toLowerCase();
       if (sportValue === "padel")  return showPadel;
       if (sportValue === "tennis") return showTennis;
-      return true; // fallback
+      return true; // fallback per altri
     }
 
     function updateCourtVisibility() {
       tennisLayer.graphics.items.forEach(g => {
         g.visible = isCourtVisibleByFilter(g);
       });
-      // non richiamiamo findNearest qui per alleggerire
+      // NIENTE findNearest qui per alleggerire
     }
 
     /* ====== UTIL UI ====== */
@@ -485,7 +449,7 @@
         if (!layer.title || layer.listMode !== "show") return;
 
         if (layer === tennisLayer) {
-          // Riga tennis
+          // Riga tennis (checkbox dedicato)
           const itemT = document.createElement("div");
           itemT.className = "legend-item";
 
@@ -511,7 +475,7 @@
           itemT.appendChild(checkboxT);
           legendContainer.appendChild(itemT);
 
-          // Riga padel
+          // Riga padel (checkbox dedicato)
           const itemP = document.createElement("div");
           itemP.className = "legend-item";
 
@@ -576,7 +540,7 @@
     }
     map.layers.on("change", updateLegend);
 
-    // Barra scala dinamica
+    // Barra scala dinamica (solo testo, nessun resize simboli)
     function updateScaleBar() {
       const scale = view.scale;
       let distance, unit;
@@ -876,74 +840,29 @@
       renderInfo();
     }
 
-    // pan/zoom + popup su uno dei 5 record
-    function focusNearestIndex(idx) {
-      const item = nearest[idx];
-      if (!item || !item.feature || !item.feature.geometry) return;
-      const g = item.feature;
-      const geom = g.geometry;
-
-      view.goTo({ target: geom, zoom: 17 }).catch(()=>{});
-
-      // uso view.openPopup per evitare problemi con override di view.popup.open
-      view.openPopup({
-        features:[g],
-        location: geom
-      });
-    }
-
-    function attachNearestEvents() {
-      const rows = infoContent.querySelectorAll(".nearest-item");
-      rows.forEach(row => {
-        row.addEventListener("click", () => {
-          const idx = Number(row.getAttribute("data-idx"));
-          if (!Number.isNaN(idx)) {
-            focusNearestIndex(idx);
-          }
-        });
-      });
-    }
-
     function renderInfo() {
-  let html = "<h4 style='margin:4px 0 6px; text-align:center;'>Campi più vicini <small>(entro 5 km)</small>:</h4>";
-
+      let html = "<h4 style='margin:4px 0 6px'>Campi più vicini <small>(entro 5 km)</small>:</h4>";
 
       if (!nearest.length) {
         html += "<p style='margin:0'>Nessun campo trovato nella distanza impostata.</p>";
       } else {
-        html += "<div class='nearest-list'>";
-        nearest.forEach((o, idx) => {
+        html += "<ul style='margin:0; padding-left:16px; font-size:12px;'>";
+        for (const o of nearest) {
           const a = o.feature.attributes || {};
           const name =
             a.name ||
             `Campo #${a.OBJECTID ?? "sconosciuto"}`;
-          const sportValue = (a.sport ? String(a.sport) : "").toLowerCase();
+          const sportValue = a.sport ? String(a.sport) : "";
           const sportLabel = sportValue ? ` (${sportValue})` : "";
           const distLabel = o.distance.toLocaleString('it-IT') + " m";
 
-          // pallino blu tennis, rosso padel
-          let dotColor = "#999999";
-          if (sportValue === "padel") {
-            dotColor = "#ff0000";
-          } else if (sportValue === "tennis") {
-            dotColor = "#0070ff";
-          }
-
-          html += `
-            <div class="nearest-item" data-idx="${idx}">
-              <span class="nearest-dot" style="background-color:${dotColor};"></span>
-              <div class="nearest-text">
-                <div class="nearest-name"><strong>${name}</strong>${sportLabel}</div>
-                <div class="nearest-distance">${distLabel}</div>
-              </div>
-            </div>
-          `;
-        });
-        html += "</div>";
+          // SOLO: Nome, sport, distanza
+          html += `<li><strong>${name}</strong>${sportLabel} — ${distLabel}</li>`;
+        }
+        html += "</ul>";
       }
 
       infoContent.innerHTML = html;
-      attachNearestEvents();
     }
 
     // iniziale: un calcolo quando la view è pronta
@@ -1124,10 +1043,7 @@
       showToast(`Selezionate ${selectedItems.length} feature`);
       if (selectedItems.length) {
         const geoms = selectedItems.map(it => it.geometry);
-        const unionExt = geoms.reduce(
-          (acc, g) => acc ? acc.union(g.extent) : g.extent,
-          null
-        );
+        const unionExt = geoms.reduce((acc, g) => acc ? acc.union(g.extent) : g.extent, null);
         if (unionExt) {
           view.goTo({ target: unionExt.expand(1.2) }).catch(()=>{});
         }
